--- a/introduction.tex
+++ b/introduction.tex
@@ -11,6 +11,12 @@ We describe our motivation in detail in Chapter 2.
 The related theory and full ab-initio derivation of all the equations
 in finite elements, density functional theory and pseudopotentials
 are summarized in Chapter 3.
+This chapter is split into the basic ingredients of our recently developed
+method: the subsections 3.1. -- 3.4. deal, respectively, with Dirac and
+Schr\"odinger equations, with the density functional theory and Kohn-Sham
+equations, with ab-initio pseudopotentials including their separable form that
+is necessary for applying pseudopotentials in combination with the
+finite-element basis set, and with the finite element method.
 
 Chapter 4 summarizes the results obtained so far within the
 present thesis, explaining how the pieces of our code works and showing
