--- a/motivation.tex
+++ b/motivation.tex
@@ -92,3 +92,46 @@ Problems}
 The Kohn-Sham equations (\ref{KSeq}) for spherically symmetric potential reduce
 to radial Schr\"odinger (or Dirac) equations, which we integrate using the
 methods described in the section 1.2.
+
+\section{Pseudopotentials}
+
+Ab-inito pseudopotentials \cite{pickett}
+considerably simplify and improve the efficiency of electronic structure
+calculations of complex systems by separating (and treating in different way)
+the core and valence electrons --- howsoever we define them ---
+and eliminating the need to include the core electrons, having high binding
+energies, into the main selfconsistency cycle. Using the modern, ab-initio
+environment reflecting pseudopotentials \cite{vackarAEPP2}
+in fact does not represent any additional approximation except
+for linearizing the density functional approach with respect to one-electron
+energies, which is the common approximation in all standard existing DFT
+methods.
+
+In combination with the finite element method, the pseudopotentials
+improve the efficiency of complex system calculations in essential
+and extremely singificant way as a consequence of several mechanisms:
+\begin{itemize}
+
+\item By treating the core electrons separately in the pseudopotential
+generation process, they are eliminated from the main selfconsistency
+cycle. This significantly reduces the number of electronic states and,
+by that, reduces the number of eigenvectors that have to participate in
+(and have to be found to satisfy) the DFT selfconsistency.
+
+\item The relativistic effect can be taken into account just for the
+core electrons with high binding energies. The separate spin-up and spin-down
+pseudopotentials can be generated in the case where the spin-orbit coupling
+shoud be taken into account for valence electrons, eliminating the need
+to solve Dirac equation for valence electrons by finite-element method.
+
+\item Eliminating the high binding energies of core electrons from
+the main DFT selfconsistency cycle reduces the numerical problems and
+improves numerical precision.
+
+\item Pseudopotentials eliminate high potential gradients and Coulomb
+potential singularities, which significantly reduces the density of
+finite-element mesh that is necesary for achieving well converged
+accurate results. By that, the efficiency can be significantly improved,
+particularly in the tasks like molecular dynamics calculations.
+
+\end{itemize}
