--- a/motivation.tex
+++ b/motivation.tex
@@ -95,43 +95,44 @@ methods described in the section 1.2.
 
 \section{Pseudopotentials}
 
-Ab-inito pseudopotentials \cite{pickett}
-considerably simplify and improve the efficiency of electronic structure
-calculations of complex systems by separating (and treating in different way)
-the core and valence electrons --- howsoever we define them ---
-and eliminating the need to include the core electrons, having high binding
-energies, into the main selfconsistency cycle. Using the modern, ab-initio
-environment reflecting pseudopotentials \cite{vackarAEPP2}
-in fact does not represent any additional approximation except
-for linearizing the density functional approach with respect to one-electron
-energies, which is the common approximation in all standard existing DFT
-methods.
+Ab-inito pseudopotentials \cite{pickett} considerably improve the efficiency of
+electronic structure calculations of complex systems by separating (and
+treating in different way) the core and valence electrons, howsoever we define
+them.  Using the modern, ab-initio environment reflecting pseudopotentials
+\cite{vackarAEPP2} in fact does not represent any additional approximation
+except for linearizing the density functional approach with respect to
+one-electron energies, which is the common approximation in all standard
+existing DFT methods.  For applying pseudopotentials within the finite-element
+basis set, using the separable form is necessary.
 
-In combination with the finite element method, the pseudopotentials
-improve the efficiency of complex system calculations in essential
-and extremely singificant way as a consequence of several mechanisms:
+In combination with the finite element method, the pseudopotentials improve the
+efficiency of complex system calculations in essential and extremely
+singificant way as a consequence of several mechanisms:
 \begin{itemize}
 
 \item By treating the core electrons separately in the pseudopotential
-generation process, they are eliminated from the main selfconsistency
-cycle. This significantly reduces the number of electronic states and,
-by that, reduces the number of eigenvectors that have to participate in
-(and have to be found to satisfy) the DFT selfconsistency.
+generation process, the need to include them into the most computationaly
+expensive DFT selfconsistency iterative process is eliminated.  The fact that
+the core electrons do not participate in this process significantly reduces the
+number of electronic states and, by that, reduces the number of eigenvectors
+that have to be found in each step iteratively repeted until the eigenvectors
+satisfy the DFT selfconsistency condition.
 
-\item The relativistic effect can be taken into account just for the
-core electrons with high binding energies. The separate spin-up and spin-down
-pseudopotentials can be generated in the case where the spin-orbit coupling
-shoud be taken into account for valence electrons, eliminating the need
-to solve Dirac equation for valence electrons by finite-element method.
+\item The relativistic effect can be taken into account just for the core
+electrons with high binding energies. The separate spin-up and spin-down
+pseudopotentials can be generated in the cases where taking into account the
+spin-orbit coupling is desirable for valence electrons, eliminating the need to
+solve Dirac equation for valence electrons by finite-element method, which
+would be extremely complicated task.
 
-\item Eliminating the high binding energies of core electrons from
-the main DFT selfconsistency cycle reduces the numerical problems and
-improves numerical precision.
+\item Eliminating the high binding energies of core electrons from the DFT
+selfconsistency iterative process reduces the numerical problems and improves
+numerical precision.
 
-\item Pseudopotentials eliminate high potential gradients and Coulomb
-potential singularities, which significantly reduces the density of
-finite-element mesh that is necesary for achieving well converged
-accurate results. By that, the efficiency can be significantly improved,
-particularly in the tasks like molecular dynamics calculations.
+\item Pseudopotentials eliminate high potential gradients and Coulomb potential
+singularities, which significantly reduces the density of finite-element mesh
+that is necesary for achieving well converged accurate results. By that, the
+efficiency can be significantly improved, particularly in the tasks like
+molecular dynamics calculations.
 
 \end{itemize}
