PySparse citation added.

--- a/master.bib
+++ b/master.bib
@@ -271,3 +271,10 @@
     YEAR="1997-2008",
     NOTE="\url{http://www.geuz.org/gmsh}"
 }
+
+@unpublished{geus,
+    AUTHOR="R. Geus",
+    TITLE="The Jacobi–Davidson algorithm for solving large
+        sparse symmetric eigenvalue problems",
+    NOTE="Ph.D. Thesis No. 14734, ETH, Zurich, 2002.",
+}
