2D well images merged.

--- a/results.tex
+++ b/results.tex
@@ -120,26 +120,9 @@ n      exact         FEM      error
 Solution saved to mesh.vtk
 \end{lstlisting}
 
-All the eigenvalues are visualized in fig. \ref{fig:well2d-1} -
-\ref{fig:well2d-9}.
+All the eigenvalues are visualized in fig. \ref{fig:well2d}.
 
-\fig{images/well1.png}{fig:well2d-1}{2D well: eigenvalue 1}
-
-\fig{images/well2.png}{fig:well2d-2}{2D well: eigenvalue 2}
-
-\fig{images/well3.png}{fig:well2d-3}{2D well: eigenvalue 3}
-
-\fig{images/well4.png}{fig:well2d-4}{2D well: eigenvalue 4}
-
-\fig{images/well5.png}{fig:well2d-5}{2D well: eigenvalue 5}
-
-\fig{images/well6.png}{fig:well2d-6}{2D well: eigenvalue 6}
-
-\fig{images/well7.png}{fig:well2d-7}{2D well: eigenvalue 7}
-
-\fig{images/well8.png}{fig:well2d-8}{2D well: eigenvalue 8}
-
-\fig{images/well9.png}{fig:well2d-9}{2D well: eigenvalue 9}
+\fig{images/well2d.png}{fig:well2d}{2D well: eigenvectors 1 -- 9}
 
 To get a better insight, we plotted the 6th eigenvalue as a 2D surface in 3D,
 see the fig \ref{fig:well2d-6warp}.
