--- a/results.tex
+++ b/results.tex
@@ -120,15 +120,16 @@ n      exact         FEM      error
 Solution saved to mesh.vtk
 \end{lstlisting}
 
-All the eigenvalues are visualized in fig. \ref{fig:well2d}.
+The lowest 9 eigenvectors are visualized in fig. \ref{fig:well2d}, from left to
+right, top to bottom.
 
-\fig{images/well2d.png}{fig:well2d}{2D well: eigenvectors 1 -- 9}
+\fig{images/well2d.png}{fig:well2d}{2D well: eigenvectors 1 to 9}
 
-To get a better insight, we plotted the 6th eigenvalue as a 2D surface in 3D,
-see the fig \ref{fig:well2d-6warp}.
+%To get a better insight, we plotted the 6th eigenvalue as a 2D surface in 3D,
+%see the fig \ref{fig:well2d-6warp}.
 
-\fig{images/well6warp.png}{fig:well2d-6warp}{2D well: eigenvalue 6, plotted as
-a surface}
+%\fig{images/well6warp.png}{fig:well2d-6warp}{2D well: eigenvalue 6, plotted as
+%a surface}
 
 \subsection{2D: Linear Harmonic Oscillator}
 
