--- a/results.tex
+++ b/results.tex
@@ -158,43 +158,14 @@ n      exact         FEM      error
 Solution saved to mesh.vtk
 \end{lstlisting}
 
-All the eigenvalues are visualized in fig. \ref{fig:osc2d-1} -
-\ref{fig:osc2d-14}.
+All the eigenvectors are visualized in fig. \ref{fig:osc2d}.
 
-\fig{images/osc1.png}{fig:osc2d-1}{2D oscillator: eigenvalue 1}
-
-\fig{images/osc2.png}{fig:osc2d-2}{2D oscillator: eigenvalue 2}
-
-\fig{images/osc3.png}{fig:osc2d-3}{2D oscillator: eigenvalue 3}
-
-\fig{images/osc4.png}{fig:osc2d-4}{2D oscillator: eigenvalue 4}
-
-\fig{images/osc5.png}{fig:osc2d-5}{2D oscillator: eigenvalue 5}
-
-\fig{images/osc6.png}{fig:osc2d-6}{2D oscillator: eigenvalue 6}
-
-\fig{images/osc7.png}{fig:osc2d-7}{2D oscillator: eigenvalue 7}
-
-\fig{images/osc8.png}{fig:osc2d-8}{2D oscillator: eigenvalue 8}
-
-\fig{images/osc9.png}{fig:osc2d-9}{2D oscillator: eigenvalue 9}
-
-\fig{images/osc10.png}{fig:osc2d-10}{2D oscillator: eigenvalue 10}
-
-\fig{images/osc11.png}{fig:osc2d-11}{2D oscillator: eigenvalue 11}
-
-\fig{images/osc12.png}{fig:osc2d-12}{2D oscillator: eigenvalue 12}
-
-\fig{images/osc13.png}{fig:osc2d-13}{2D oscillator: eigenvalue 13}
-
-\fig{images/osc14.png}{fig:osc2d-14}{2D oscillator: eigenvalue 14}
+\fig{images/osc2d.png}{fig:osc2d}{2D oscillator: eigenvectors 1 to 15}
 
 To get a better insight, we plotted the 8th and 10th eigenvalue as a 2D surface
-in 3D, see the figs \ref{fig:osc2d-8warp} and \ref{fig:osc2d-10warp}.
+in 3D, see the fig \ref{fig:osc2dwarp}.
 
-\fig{images/osc8warp.png}{fig:osc2d-8warp}{2D oscillator: eigenvalue 8, plotted as a surface}
-
-\fig{images/osc10warp.png}{fig:osc2d-10warp}{2D oscillator: eigenvalue 10, plotted as a surface}
+\fig{images/osc2dwarp.png}{fig:osc2dwarp}{2D oscillator: eigenvector 8 and 10, plotted as a surface}
 
 \subsection{2D: Hydrogen Atom}
 
