nonsym images reworked.

--- a/results.tex
+++ b/results.tex
@@ -408,31 +408,10 @@ In this example we use a potential from two nuclei positioned at $(-5, 0)$ and
 $(5, 0)$. This is a nonsymmetric problem, thus one cannot use the usual
 way to reduce the Schr\"odinger equation to radial and angular
 parts. A general partial differential equations solver (in our case FEM) has to
-be used. See the figs \ref{fig:nonsym2-first} --
-\ref{fig:nonsym2-last}.
+be used. See the figs \ref{fig:nonsym2}.
 
-\fig{images/nonsym20.png}{fig:nonsym2-first}{2D nonsymmetric potential I:
-eigenvalue 0}
-
-\fig{images/nonsym21.png}{}{2D nonsymmetric potential I: eigenvalue 1}
-
-\fig{images/nonsym22.png}{}{2D nonsymmetric potential I: eigenvalue 2}
-
-\fig{images/nonsym23.png}{}{2D nonsymmetric potential I: eigenvalue 3}
-
-\fig{images/nonsym24.png}{}{2D nonsymmetric potential I: eigenvalue 4}
-% this is needed, otherwise latex cries on the fig below.
-\clearpage
-
-\fig{images/nonsym25.png}{}{2D nonsymmetric potential I: eigenvalue 5}
-
-\fig{images/nonsym26.png}{}{2D nonsymmetric potential I: eigenvalue 6}
-
-\fig{images/nonsym27.png}{}{2D nonsymmetric potential I: eigenvalue 7}
-
-\fig{images/nonsym28.png}{}{2D nonsymmetric potential I: eigenvalue 8}
-
-\fig{images/nonsym29.png}{fig:nonsym2-last}{2D nonsymmetric potential I: eigenvalue 9}
+\fig{images/nonsym2.png}{fig:nonsym2}{2D nonsymmetric potential I:
+eigenvectors 0 to 10}
 
 \subsection{2D: nonsymmetric potential II}
 
@@ -498,26 +477,10 @@ plot}
 \subsection{2D: nonsymmetric potential III}
 
 Finally we calculate the Schr\"odinger equation for 20 atom nuclei in a circle.
-See the figs \ref{fig:nonsym-first} --
-\ref{fig:nonsym-last}.
+See the fig \ref{fig:nonsym4}.
 
-\fig{images/nonsym40.png}{fig:nonsym-first}{2D nonsymmetric potential III:
-eigenvalue 0}
-
-\fig{images/nonsym40warp.png}{}{2D nonsymmetric potential III:
-eigenvalue 0, surface plot}
-
-\fig{images/nonsym44.png}{}{2D nonsymmetric potential III:
-eigenvalue 4}
-
-\fig{images/nonsym44warp.png}{}{2D nonsymmetric potential III:
-eigenvalue 4, surface plot}
-
-\fig{images/nonsym45.png}{}{2D nonsymmetric potential III:
-eigenvalue 5}
-
-\fig{images/nonsym45warp.png}{fig:nonsym2-first}{2D nonsymmetric potential III:
-eigenvalue 5, surface plot}
+\fig{images/nonsym4.png}{fig:nonsym4}{2D nonsymmetric potential III:
+eigenvectors 0, 4 and 5, plot in 2D on the left, surface plot on the right}
 
 \section{Density Functional Theory, Spherically Symmetric Solution}
 
