--- a/results.tex
+++ b/results.tex
@@ -416,63 +416,11 @@ eigenvectors 0 to 10}
 \subsection{2D: nonsymmetric potential II}
 
 In this example we use a potential from three nuclei positioned at $(-5, 0)$,
-$(5, 0)$ and $(0, 5)$. See the figs \ref{fig:nonsym-first} --
+$(5, 0)$ and $(0, 5)$. See the fig \ref{fig:nonsym3} --
 \ref{fig:nonsym-last}.
 
-\fig{images/nonsym30.png}{fig:nonsym-first}{2D nonsymmetric potential II:
-eigenvalue 0}
-
-\fig{images/nonsym303.png}{}{2D nonsymmetric potential II: eigenvalue 0, surface
-plot}
-
-\fig{images/nonsym31.png}{}{2D nonsymmetric potential II: eigenvalue 1}
-
-\fig{images/nonsym313.png}{}{2D nonsymmetric potential II: eigenvalue 1, surface
-plot}
-
-\fig{images/nonsym32.png}{}{2D nonsymmetric potential II: eigenvalue 2}
-
-\fig{images/nonsym323.png}{}{2D nonsymmetric potential II: eigenvalue 2, surface
-plot}
-
-\fig{images/nonsym33.png}{}{2D nonsymmetric potential II: eigenvalue 3}
-
-\fig{images/nonsym333.png}{}{2D nonsymmetric potential II: eigenvalue 3, surface
-plot}
-
-\fig{images/nonsym34.png}{}{2D nonsymmetric potential II: eigenvalue 4}
-
-\fig{images/nonsym343.png}{}{2D nonsymmetric potential II: eigenvalue 4, surface
-plot}
-
-\fig{images/nonsym35.png}{}{2D nonsymmetric potential II: eigenvalue 5}
-% this is needed, otherwise latex cries on the fig below.
-\clearpage
-
-\fig{images/nonsym353.png}{}{2D nonsymmetric potential II: eigenvalue 5, surface
-plot}
-
-\fig{images/nonsym36.png}{}{2D nonsymmetric potential II: eigenvalue 6}
-
-\fig{images/nonsym363.png}{}{2D nonsymmetric potential II: eigenvalue 6, surface
-plot}
-
-\fig{images/nonsym37.png}{}{2D nonsymmetric potential II: eigenvalue 7}
-
-\fig{images/nonsym373.png}{}{2D nonsymmetric potential II: eigenvalue 7, surface
-plot}
-
-% this is needed, otherwise latex cries on the fig below.
-\clearpage
-
-\fig{images/nonsym38.png}{}{2D nonsymmetric potential II: eigenvalue 8}
-
-\fig{images/nonsym383.png}{}{2D nonsymmetric potential II: eigenvalue 8, surface
-plot}
-
-\fig{images/nonsym39.png}{}{2D nonsymmetric potential II: eigenvalue 9}
-
-\fig{images/nonsym393.png}{fig:nonsym-last}{2D nonsymmetric potential II: eigenvalue 9, surface plot}
+\fig{images/nonsym3.png}{fig:nonsym3}{2D nonsymmetric potential II:
+eigenvectors 0 to 9, plot in 2d on the left, surface plot on the right}
 
 \subsection{2D: nonsymmetric potential III}
 
