--- a/results.tex
+++ b/results.tex
@@ -419,8 +419,11 @@ In this example we use a potential from three nuclei positioned at $(-5, 0)$,
 $(5, 0)$ and $(0, 5)$. See the fig \ref{fig:nonsym3} --
 \ref{fig:nonsym-last}.
 
-\fig{images/nonsym3.png}{fig:nonsym3}{2D nonsymmetric potential II:
-eigenvectors 0 to 9, plot in 2d on the left, surface plot on the right}
+\fig{images/nonsym3a.png}{fig:nonsym3}{2D nonsymmetric potential II:
+eigenvectors 0 to 4, plot in 2d on the left, surface plot on the right}
+
+\fig{images/nonsym3b.png}{fig:nonsym3}{2D nonsymmetric potential II:
+eigenvectors 5 to 9, plot in 2d on the left, surface plot on the right}
 
 \subsection{2D: nonsymmetric potential III}
 
