--- a/results.tex
+++ b/results.tex
@@ -171,7 +171,7 @@ All the eigenvectors are visualized in fig. \ref{fig:osc2d}.
 
 \fig{images/osc2d.png}{fig:osc2d}{2D oscillator: eigenvectors 1 to 15}
 
-To get a better insight, we plotted the 8th and 10th eigenvalue as a 2D surface
+To get a better insight, we plotted the 8th and 10th eigenvector as a 2D surface
 in 3D, see the fig \ref{fig:osc2dwarp}.
 
 \fig{images/osc2dwarp.png}{fig:osc2dwarp}{2D oscillator: eigenvector 8 and 10, plotted as a surface}
@@ -289,15 +289,15 @@ FEM    & 14.861 & 29.833 & 44.919 & 55.035 & 60.123 & 70.305 \\
 \end{tabular}
 
 So we got the correct energies and correct degeneracies. See the figs
-\ref{fig:well3d1} -- \ref{fig:well3d10c} for examples of eigenvalues.
+\ref{fig:well3d1} -- \ref{fig:well3d10c} for examples of eigenvectors.
 
-\fig{images/well3d1.png}{fig:well3d1}{3D potential well: eigenvalue 1, cut
+\fig{images/well3d1.png}{fig:well3d1}{3D potential well: eigenvector 1, cut
 plane}
 
-\fig{images/well3d1c.png}{fig:well3d1c}{3D potential well: eigenvalue 1, cut
+\fig{images/well3d1c.png}{fig:well3d1c}{3D potential well: eigenvector 1, cut
 plane and contours}
 
-\fig{images/well3d10c.png}{fig:well3d10c}{3D potential well: eigenvalue 10, cut
+\fig{images/well3d10c.png}{fig:well3d10c}{3D potential well: eigenvector 10, cut
 plane and contours}
 
 \subsection{3D: Linear Harmonic Oscillator}
@@ -358,19 +358,19 @@ FEM    & 1.522 & 2.535 & 3.554 & 4.578 \\
        &        &       & 3.556 &   \\
 \end{tabular}
 
-For better imagination, we plotted the eigenvalue 5 from several sides and then
-eigenvalue 10, see the figs \ref{fig:osc3d5} -- \ref{fig:osc3d10}.
+For better imagination, we plotted the eigenvector 5 from several sides and then
+eigenvector 10, see the figs \ref{fig:osc3d5} -- \ref{fig:osc3d10}.
 
-\fig{images/osc3d5.png}{fig:osc3d5}{3D oscillator: eigenvalue 5, cut
+\fig{images/osc3d5.png}{fig:osc3d5}{3D oscillator: eigenvector 5, cut
 plane}
 
-\fig{images/osc3d5c.png}{fig:osc3d5c}{3D oscillator: eigenvalue 5, cut
+\fig{images/osc3d5c.png}{fig:osc3d5c}{3D oscillator: eigenvector 5, cut
 plane and countour}
 
-\fig{images/osc3d5c2.png}{fig:osc3d5c2}{3D oscillator: eigenvalue 5,
+\fig{images/osc3d5c2.png}{fig:osc3d5c2}{3D oscillator: eigenvector 5,
 countour}
 
-\fig{images/osc3d10.png}{fig:osc3d10}{3D oscillator: eigenvalue 10, cut
+\fig{images/osc3d10.png}{fig:osc3d10}{3D oscillator: eigenvector 10, cut
 plane and contour}
 
 \subsection{3D: Hydrogen Atom}
