Citation added, polishing.

--- a/master.bib
+++ b/master.bib
@@ -1,3 +1,4 @@
+@STRING(PRA="Phys. Rev. A")
 @STRING(PRB="Phys. Rev. B")
 @STRING(PRL="Phys. Rev. Lett.")
 @STRING(RMP="Rev. Mod. Phys.")
@@ -277,4 +278,14 @@
     TITLE="The Jacobi–Davidson algorithm for solving large
         sparse symmetric eigenvalue problems",
     NOTE="Ph.D. Thesis No. 14734, ETH, Zurich, 2002.",
+}
+
+@ARTICLE{nist,
+    AUTHOR="S. Kotochigova and Z.H. Levine and E.L. Shirley and M.D. Stiles and C.W.  Clark",
+    TITLE="Local-density-functional calculations of the energy of atoms",
+    JOURNAL=PRA,
+    VOLUME=55,
+    YEAR=1997,
+    PAGES="191-199",
+    NOTE="\url{http://physics.nist.gov/PhysRefData/DFTdata/contents.html}"
 }
