Use capital letters in Theoretical Physics.

--- a/master.tex
+++ b/master.tex
@@ -69,7 +69,7 @@ Institute of Theoretical Physics\\ % doplňte název katedry či ústavu
 \hbox{$\quad\quad\quad\quad\quad$}   Academy of Sciences, Czech Republic
 \vspace{1mm}\\
 %
-\noindent Field of study: theoretical physics
+\noindent Field of study: Theoretical Physics
 \bigskip
 \bigskip
 \begin{center}
